Your First Program

--- a/Actividad_de_semana_1_2_Python_for_Data_Science_(IBM).ipynb
+++ b/Actividad_de_semana_1_2_Python_for_Data_Science_(IBM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMY/gmWTOcbqA/AhXxFFZEA",
+      "authorship_tag": "ABX9TyO2GbilAeHCJN/sRKNY6psh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IizalU0RPRtn",
-        "outputId": "058bf7d9-322e-4240-cdc5-fb34b557319e"
+        "outputId": "e9217650-6685-40be-a476-b684da5a9080"
       },
       "outputs": [
         {
@@ -49,6 +49,94 @@
         "#print Hello Python 101\n",
         "print(\"Hello Python 101\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Error de sintaxis\n",
+        "Frint(\"Hello Python 101\")"
+      ],
+      "metadata": {
+        "id": "voDhUzwyQVGJ",
+        "outputId": "7b7e4592-1e62-4806-92f9-597c0140ab44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-8618882092ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#This is a syntactic error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mFrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Hello Python 101\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Frint' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Error de semántica\n",
+        "print(\"Hello Python 102\")"
+      ],
+      "metadata": {
+        "id": "38q4lwXLQmyx",
+        "outputId": "bca1d85a-fa55-4e82-f76c-c5d5b8463026",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Python 102\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello\\nWorld!\")"
+      ],
+      "metadata": {
+        "id": "XQq1qvwiQ6sz",
+        "outputId": "b9117cd1-de63-439f-9e3f-b6e4b7c03a43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n",
+            "World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# print('Hello World!') "
+      ],
+      "metadata": {
+        "id": "gw5MdqcJRJti"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
