--- a/Actividad_de_semana_1_2_Python_for_Data_Science_(IBM).ipynb
+++ b/Actividad_de_semana_1_2_Python_for_Data_Science_(IBM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2GbilAeHCJN/sRKNY6psh",
+      "authorship_tag": "ABX9TyPygt9a1QqEQH8RMXO2v5km",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Módulo 1"
+      ],
+      "metadata": {
+        "id": "J8zQk1AU7_cZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -53,35 +62,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Error de sintaxis\n",
-        "Frint(\"Hello Python 101\")"
-      ],
-      "metadata": {
-        "id": "voDhUzwyQVGJ",
-        "outputId": "7b7e4592-1e62-4806-92f9-597c0140ab44",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 182
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-8618882092ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#This is a syntactic error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mFrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Hello Python 101\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Frint' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#Error de semántica\n",
         "print(\"Hello Python 102\")"
       ],
@@ -92,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +115,498 @@
       "metadata": {
         "id": "gw5MdqcJRJti"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Types"
+      ],
+      "metadata": {
+        "id": "Ieu9hYDU8IZT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(11)"
+      ],
+      "metadata": {
+        "id": "xlzvL_jT7iP6",
+        "outputId": "a966afb5-a220-4f15-de7d-b9435002ad14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(21.213)"
+      ],
+      "metadata": {
+        "id": "7-emnuHp8Qm3",
+        "outputId": "c38521cc-236f-4685-887a-e20ca5ee8957",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(\"Hello Python 101\")"
+      ],
+      "metadata": {
+        "id": "8NHFy58r8TSP",
+        "outputId": "e9babb01-67bb-43c5-a75f-8a7edfd63e38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float(2)"
+      ],
+      "metadata": {
+        "id": "2Kz-7NZb8V0S",
+        "outputId": "7c8a6ac4-b3a3-465b-9457-19a61a69b427",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(1.1)"
+      ],
+      "metadata": {
+        "id": "B3XPGN6g8o6I",
+        "outputId": "8188032d-0261-418e-af4c-fdd369081ff6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(\"1\")"
+      ],
+      "metadata": {
+        "id": "OJg_0sGX8q3Z",
+        "outputId": "1dd4788b-761d-4bfd-8b8f-2ceac156c14b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str(1)"
+      ],
+      "metadata": {
+        "id": "pRlBv9X_8sox",
+        "outputId": "9d38c92c-e33d-4dc7-d25f-c70b377cce65",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str(4.5)"
+      ],
+      "metadata": {
+        "id": "mxkrPVZX8yH6",
+        "outputId": "82014fb9-3aa8-4bec-e4af-c590eb3ac83e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'4.5'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(True)"
+      ],
+      "metadata": {
+        "id": "o5SlPALE8196",
+        "outputId": "60b77a95-7056-44e9-da96-5ea5785c951d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(True)"
+      ],
+      "metadata": {
+        "id": "GXzJCXGk898q",
+        "outputId": "4ac6abeb-b1ff-485d-9a47-31e0cd939a3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(False)"
+      ],
+      "metadata": {
+        "id": "9HGZweB79Bpg",
+        "outputId": "d42bd248-9e55-40eb-a486-b9cb1480cf99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(1)"
+      ],
+      "metadata": {
+        "id": "FsmZH1ja9Dgd",
+        "outputId": "07adeca5-eb22-4fc5-f5a8-62928b2306d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(0)"
+      ],
+      "metadata": {
+        "id": "uqL4tvik9E4c",
+        "outputId": "8c7fe8a9-4f2a-426c-e980-036183a150e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(int(1))"
+      ],
+      "metadata": {
+        "id": "PVDi6sWO9GDC",
+        "outputId": "ce09ab90-a6be-407a-bc90-dd5401a02838",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(1)"
+      ],
+      "metadata": {
+        "id": "HUpdmSXe9NBh",
+        "outputId": "7ef625bf-c652-4442-8ad8-b4baf295788d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(\"Hello World\")"
+      ],
+      "metadata": {
+        "id": "xJIvt_bN9PCw",
+        "outputId": "4b9fc640-7f65-4d2a-8977-047bfb915b3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(\"1.1\")"
+      ],
+      "metadata": {
+        "id": "mJWAJmd79nDS",
+        "outputId": "6eb74280-26c8-4f3b-ada9-1add8db838cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(bool(int(\"1\")))"
+      ],
+      "metadata": {
+        "id": "UEk3tJec9pU8",
+        "outputId": "b3000cf9-176f-4aaa-faaf-f13e4e70a452",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8GoxSeA0929U"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
