Writing Files with Open

--- a/Semana_2_Actividad_1_Python_for_Data_Science_(IBM).ipynb
+++ b/Semana_2_Actividad_1_Python_for_Data_Science_(IBM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGgB2Ojfvr1TGeXLtrNVRJ",
+      "authorship_tag": "ABX9TyODVXdzS6TzKx3o8YOl4Dav",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5qW8a0Uv3S1X",
-        "outputId": "b9a0b10f-0ba6-4202-87de-121944e856e5"
+        "outputId": "028b8774-9722-4abc-e674-41895a3773e7"
       },
       "execution_count": 1,
       "outputs": [
@@ -85,7 +85,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('Example1.txt', <http.client.HTTPMessage at 0x7f05d2b27ed0>)"
+              "('Example1.txt', <http.client.HTTPMessage at 0x7f8be7b639d0>)"
             ]
           },
           "metadata": {},
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {
         "id": "QoEazPEb0-ZM"
       },
@@ -135,9 +135,9 @@
           "height": 36
         },
         "id": "KiAZUlcl2Or4",
-        "outputId": "c04fbb66-46d1-431d-b7f6-f9e46008c8bd"
+        "outputId": "f92979a3-0b28-441c-c752-1def27728e67"
       },
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 3
         }
       ]
     },
@@ -165,9 +165,9 @@
           "height": 36
         },
         "id": "BUPukyZ54p46",
-        "outputId": "64cfad0b-7683-445f-f303-12daa7a64781"
+        "outputId": "d8599b09-59e9-406b-fa5f-8376ed245334"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 4
         }
       ]
     },
@@ -205,9 +205,9 @@
           "height": 36
         },
         "id": "RD6Js8k0saej",
-        "outputId": "63644a37-35d6-4ba4-ba6d-11a8fe289633"
+        "outputId": "6b06cf02-2228-4238-f16e-b441276ded86"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +220,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 5
         }
       ]
     },
@@ -232,7 +232,7 @@
       "metadata": {
         "id": "E2P4Toyk4vVC"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7QdUY-Cc5gGw",
-        "outputId": "fce72a22-d791-45b1-a493-3712c3f28c78"
+        "outputId": "5369dad1-010e-4cb4-bfcd-4fff710a8dcb"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,9 +299,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4lgM3W7-OFg",
-        "outputId": "3112c308-3394-42d1-e2f6-4d323c9a0020"
+        "outputId": "fef6e23e-dce4-4526-8f73-e43a7eb7ca79"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,9 +325,9 @@
           "height": 36
         },
         "id": "CpQ5Csyr6jGL",
-        "outputId": "34629e71-7c5e-4e8b-b1de-680502b886ac"
+        "outputId": "57a82faa-9077-4f39-b0a7-ad9023a56eb2"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -366,9 +366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NLeBYBVa7Qvj",
-        "outputId": "25dcad81-7dfd-4ed8-afeb-906b1e0b3335"
+        "outputId": "4134d813-ce7d-4dfa-9e15-d2ed17443a61"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,9 +395,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EC9wW7vt_PET",
-        "outputId": "f5bd1127-541d-442b-e2aa-83d4c4939b36"
+        "outputId": "b86eb6f7-9eee-4aef-8a1a-ff937a8bf6f6"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,9 +432,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FCvXHabcAOqg",
-        "outputId": "a5725cb4-303f-43ea-9b91-88d0fc54d5b1"
+        "outputId": "e0203880-3297-4a05-a0f7-7a46fa04c536"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,9 +471,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "edOu44p3Afx7",
-        "outputId": "bc701a94-f4ec-4f97-d59c-e6107074c4d7"
+        "outputId": "6700e28d-c12c-4c50-e306-4c0c97dc6710"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,9 +501,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6niRygZ0BSo9",
-        "outputId": "74137ba5-75ab-47ed-bdf2-5b4a95adc450"
+        "outputId": "403f6aeb-baf9-4b83-ca46-bd868103465b"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,6 +516,142 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Writing Files with Open"
+      ],
+      "metadata": {
+        "id": "QT9kal3Gc7Fy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El método write sirve para escribir datos dentro de un archivo"
+      ],
+      "metadata": {
+        "id": "ArrHrocGdGJ9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Creamos un archivo txt de la siguiente manera**"
+      ],
+      "metadata": {
+        "id": "4mQMpjkze2gU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "File1=open(\"Example2.txt\",\"w\")"
+      ],
+      "metadata": {
+        "id": "fuAer0gffN84"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Usamos la función open, usamos como primer argumento la ruta, al final de la ruta ponemos el nombre que queremos para el archivo, el segundo argumento es el modo que en este caso es w o write"
+      ],
+      "metadata": {
+        "id": "vPWnKmnofge8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para añadir líneas al txt hacemos lo siguiente (sino existe el archivo lo crea):"
+      ],
+      "metadata": {
+        "id": "SOq8CNt4hyAq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"Example2.txt\",\"w\") as File1:\n",
+        "  File1.write(\"This is line A\\n\") #write es para checar una línea dentro del txt\n",
+        "  File1.write(\"This is line B\\n\") #cuando se ejecuta hasta aquí se cierra la función open"
+      ],
+      "metadata": {
+        "id": "pgQZp3kFfbUT"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Podemos crear cada elemento en una lista a un archivo"
+      ],
+      "metadata": {
+        "id": "8Sg9wXSMkBff"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Lines=[\"This is line A\\n\",\"This is line B\\n\",\"This is line C\\n\"]\n",
+        "with open(\"Example2.txt\",\"w\") as File1:\n",
+        "  for line in Lines: #usamos un ciclo for para leer cada elemento dentro de la lista Lines y la pasamos a la variable line\n",
+        "    File1.write(line) #al final se cierra la función open"
+      ],
+      "metadata": {
+        "id": "TTzIK2EwiTkb"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para no crear un nuevo archivo, sino usar el existente se utiliza el método append"
+      ],
+      "metadata": {
+        "id": "QFMU6NmomiyC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"Example2.txt\",\"a\") as File1:\n",
+        "  File1.write(\"This is line C\") #esto crea una nueva linea abajo de todo lo existente en el txt y después lo cierra"
+      ],
+      "metadata": {
+        "id": "prv7jrxUktcd"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creamos un nuevo archivo txt a partir de uno existente de la siguiente forma:"
+      ],
+      "metadata": {
+        "id": "regJkmLHq6JE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"Example1.txt\",\"r\") as readfile: #archivo que deseamos copiar\n",
+        "  with open(\"Example3.txt\",\"w\") as writefile: #archivo nuevo donde deseamos copiar en el archivo Example1.txt\n",
+        "    for line in readfile: #ciclo for donde readfile es la lista y line la variable que incrementa\n",
+        "      writefile.write(line)"
+      ],
+      "metadata": {
+        "id": "QjEsQBdepo0-"
+      },
+      "execution_count": 27,
+      "outputs": []
     }
   ]
 }
