Working with and Saving Data with Pandas | Módulo 4 Completo

--- a/Semana_2_Actividad_1_Python_for_Data_Science_(IBM).ipynb
+++ b/Semana_2_Actividad_1_Python_for_Data_Science_(IBM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOjj662AOYC96fF7URofMW",
+      "authorship_tag": "ABX9TyMEW9b1EugEC2Zh+92pB7R5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -778,12 +778,12 @@
         "df.head() #el método head() sirve para mostrar los primeros 5 registros del dataframe"
       ],
       "metadata": {
-        "id": "ECAYXFab40vG",
-        "outputId": "363c7d62-08a2-4001-bae8-1c3b97366870",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
+          "height": 270
+        },
+        "id": "ECAYXFab40vG",
+        "outputId": "363c7d62-08a2-4001-bae8-1c3b97366870"
       },
       "execution_count": 24,
       "outputs": [
@@ -1017,12 +1017,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "dH2f-IOv-jpz",
-        "outputId": "05cfdb77-34e1-4ad2-a118-31a7e41ae2c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
+          "height": 270
+        },
+        "id": "dH2f-IOv-jpz",
+        "outputId": "05cfdb77-34e1-4ad2-a118-31a7e41ae2c4"
       },
       "execution_count": 33,
       "outputs": [
@@ -1273,12 +1273,12 @@
         "songs_frame.head()"
       ],
       "metadata": {
-        "id": "myH02WUkE4SU",
-        "outputId": "710c1610-8b4e-4215-9718-bb950e2dd0ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "myH02WUkE4SU",
+        "outputId": "710c1610-8b4e-4215-9718-bb950e2dd0ea"
       },
       "execution_count": 52,
       "outputs": [
@@ -1502,11 +1502,11 @@
         "df.iloc[0,0] # primero va la fila y después la columna"
       ],
       "metadata": {
-        "id": "tr8wZj98F_Ux",
-        "outputId": "5bdab811-1d78-4438-8a90-f83a6e41bd62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tr8wZj98F_Ux",
+        "outputId": "5bdab811-1d78-4438-8a90-f83a6e41bd62"
       },
       "execution_count": 64,
       "outputs": [
@@ -1528,11 +1528,11 @@
         "df.iloc[1,0] #segunda fila y primer columna"
       ],
       "metadata": {
-        "id": "naJk8J83GXm8",
-        "outputId": "8b0f2e61-db86-4562-fd75-2e56984842ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "naJk8J83GXm8",
+        "outputId": "8b0f2e61-db86-4562-fd75-2e56984842ce"
       },
       "execution_count": 66,
       "outputs": [
@@ -1554,11 +1554,11 @@
         "df.iloc[0,2] #primera fila y tercera columna"
       ],
       "metadata": {
-        "id": "kff_fWnvHJum",
-        "outputId": "0bc7217a-a156-47c8-fdc5-afe18cbb7900",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kff_fWnvHJum",
+        "outputId": "0bc7217a-a156-47c8-fdc5-afe18cbb7900"
       },
       "execution_count": 68,
       "outputs": [
@@ -1580,11 +1580,11 @@
         "df.iloc[1,2] #segunda fila y tercera columna"
       ],
       "metadata": {
-        "id": "c-75b8kgHUvt",
-        "outputId": "263ddf54-8438-4dea-a8bb-283ecbc89a90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c-75b8kgHUvt",
+        "outputId": "263ddf54-8438-4dea-a8bb-283ecbc89a90"
       },
       "execution_count": 69,
       "outputs": [
@@ -1615,11 +1615,11 @@
         "df.loc[0,\"longitude\"] #primera fila y columna \"longitude\""
       ],
       "metadata": {
-        "id": "WiSPaRWSHiqF",
-        "outputId": "eb050cc4-227f-4c6b-8ffe-bf75be1172da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WiSPaRWSHiqF",
+        "outputId": "eb050cc4-227f-4c6b-8ffe-bf75be1172da"
       },
       "execution_count": 73,
       "outputs": [
@@ -1641,11 +1641,11 @@
         "df.loc[1,\"longitude\"] #segunda fila y columna \"longitude\""
       ],
       "metadata": {
-        "id": "X8kdPDYqH1Mp",
-        "outputId": "f88adcc1-2e14-48bf-ad17-9783f8489299",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X8kdPDYqH1Mp",
+        "outputId": "f88adcc1-2e14-48bf-ad17-9783f8489299"
       },
       "execution_count": 75,
       "outputs": [
@@ -1667,11 +1667,11 @@
         "df.loc[0,\"latitude\"] #primera fila y columna \"latitude\""
       ],
       "metadata": {
-        "id": "yCaBmH1QIOQr",
-        "outputId": "c40ad2fc-79cd-40e6-e104-f6c96d26cca0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yCaBmH1QIOQr",
+        "outputId": "c40ad2fc-79cd-40e6-e104-f6c96d26cca0"
       },
       "execution_count": 76,
       "outputs": [
@@ -1693,11 +1693,11 @@
         "df.loc[1,\"latitude\"] #segunda fila y columna \"latitude\""
       ],
       "metadata": {
-        "id": "6eDW9rMmIfMu",
-        "outputId": "cd4ddbad-1c1f-4bee-fcf3-caff1b569fbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6eDW9rMmIfMu",
+        "outputId": "cd4ddbad-1c1f-4bee-fcf3-caff1b569fbf"
       },
       "execution_count": 77,
       "outputs": [
@@ -1729,11 +1729,11 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "deD_5z5nI4LL",
-        "outputId": "daa600fd-e22d-48df-dc6b-cd9932913688",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "deD_5z5nI4LL",
+        "outputId": "daa600fd-e22d-48df-dc6b-cd9932913688"
       },
       "execution_count": 80,
       "outputs": [
@@ -1764,11 +1764,11 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "ToVPxLu9JFWE",
-        "outputId": "7e647399-0b49-4bcf-dd25-3400ba74a9ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ToVPxLu9JFWE",
+        "outputId": "7e647399-0b49-4bcf-dd25-3400ba74a9ae"
       },
       "execution_count": 83,
       "outputs": [
@@ -1794,12 +1794,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "NGmYXAclJt9z",
-        "outputId": "6971ff31-aec0-4115-9dc3-2d9ff96c1314",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "NGmYXAclJt9z",
+        "outputId": "6971ff31-aec0-4115-9dc3-2d9ff96c1314"
       },
       "execution_count": 84,
       "outputs": [
@@ -1939,6 +1939,197 @@
           "execution_count": 84
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Working with and Saving Data with Pandas"
+      ],
+      "metadata": {
+        "id": "NZcspeqmLLvz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Método para determinar los elementos únicos de una columna dentro de un dataframe"
+      ],
+      "metadata": {
+        "id": "l53KNtmkLh5k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "songs_frame[\"Released\"].unique() #el método unique muestra los elementos únicos dentro de la columna Released"
+      ],
+      "metadata": {
+        "id": "Oed07KPlLRf6",
+        "outputId": "0594d492-212c-4f01-9f7c-d35e8ae8b4e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1982, 1980, 1973, 1992, 1977])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Podemos usar operadores lógicos dentro de una columna de un dataframe, lo que obtenemos es una serie de valores booleanos que regresarán falso o verdadero dependiendo de la operación que hagamos"
+      ],
+      "metadata": {
+        "id": "h-d-KsYZMt1i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "songs_frame[\"Released\"]>=1980"
+      ],
+      "metadata": {
+        "id": "LqeuCIamLtT6",
+        "outputId": "3bee1b70-8d59-4095-b707-5c1c3c06f790",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     True\n",
+              "1     True\n",
+              "2    False\n",
+              "3     True\n",
+              "4    False\n",
+              "Name: Released, dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=pd.DataFrame({'a':[1,2,1],'b':[1,1,1]})\n",
+        "df['a']==1"
+      ],
+      "metadata": {
+        "id": "XIRqzoRBQRsg",
+        "outputId": "8d9b3c1a-99a5-4b31-c879-7d9fcb8babc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     True\n",
+              "1    False\n",
+              "2     True\n",
+              "Name: a, dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para seleccionar ciertas filas que cumplan una condición hacemos lo siguiente:"
+      ],
+      "metadata": {
+        "id": "z9ZRLTdcN_qR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1=songs_frame[songs_frame[\"Released\"]>=1980] #el dataframe va dentro de los corchetes del mismo dataframe, seguido del operador lógico\n",
+        "print(df1)"
+      ],
+      "metadata": {
+        "id": "I_zlrXbOMkMC",
+        "outputId": "6a7da5de-9aef-47da-876d-a66561a1742c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "           Album  Released    Length\n",
+            "0       Thriller      1982  00:42:19\n",
+            "1  Back in Black      1980  00:42:11\n",
+            "3  The Bodyguard      1992  00:57:44\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Save as CSV\n",
+        "Guardamos el dataframe como un archivo csv de la siguiente manera:"
+      ],
+      "metadata": {
+        "id": "AqiMLvxUO61a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.to_csv(\"new_songes.csv\") #el método es to_csv y tiene como argumento el nombre que queremos para el archivo"
+      ],
+      "metadata": {
+        "id": "OS2KEuJzOTrF"
+      },
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv(\"file.csv\")"
+      ],
+      "metadata": {
+        "id": "pj1rcvAoQJ__"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Nota:** Existen otras funciones para guardar el dataframe en otros formatos"
+      ],
+      "metadata": {
+        "id": "JSz-gi0zPcXd"
+      }
     }
   ]
 }
